force-app/main/default/objects/Post_Dated_Cheque__c/Post_Dated_Cheque__c.object-meta.xml
<CustomObject>
    <label>Post-Dated Cheque</label>
    <nameField>
        <displayFormat>PDC-{000000}</displayFormat>
        <label>Post-Dated Cheque Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Post-Dated Cheques</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>