force-app/main/default/objects/Post_Dated_Cheque__c/fields/Cheque_Amount__c.field-meta.xml
<CustomField>
    <fullName>Cheque_Amount__c</fullName>
    <label>Cheque Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>