force-app/main/default/objects/Post_Dated_Cheque__c/fields/Cheque_Number__c.field-meta.xml
<CustomField>
    <fullName>Cheque_Number__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Cheque Number</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>