force-app/main/default/objects/Post_Dated_Cheque__c/fields/Cheque_Receipt_Date__c.field-meta.xml
<CustomField>
    <fullName>Cheque_Receipt_Date__c</fullName>
    <label>Cheque Receipt Date</label>
    <type>Date</type>
</CustomField>