force-app/main/default/objects/Post_Dated_Cheque__c/fields/Demand__c.field-meta.xml
<CustomField>
    <fullName>Demand__c</fullName>
    <label>Demand</label>
    <referenceTo>RW_Demand__c</referenceTo>
    <relationshipLabel>Post-Dated Cheques</relationshipLabel>
    <relationshipName>Post_Dated_Cheques</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>