force-app/main/default/objects/Post_Dated_Cheque__c/fields/Expected_Clearance_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Clearance_Date__c</fullName>
    <label>Expected Clearance Date</label>
    <type>Date</type>
</CustomField>