force-app/main/default/objects/Post_Dated_Cheque__c/validationRules/Expected_Date_Cannot_Be_Past.validationRule-meta.xml
<ValidationRule>
    <fullName>Expected_Date_Cannot_Be_Past</fullName>
    <active>true</active>
    <errorConditionFormula>Expected_Clearance_Date__c  &lt; Today()</errorConditionFormula>
    <errorDisplayField>Expected_Clearance_Date__c</errorDisplayField>
    <errorMessage>Expected Clearance Date cannot be in the past.</errorMessage>
</ValidationRule>